Fix styling on mobile

--- a/public/css/tmsm-aquos-spa-booking-public.less
+++ b/public/css/tmsm-aquos-spa-booking-public.less
@@ -32,9 +32,15 @@
   display: none;
 }
 
-#tmsm-aquos-spa-booking-confirm-container{
-  text-align: center;
-  padding-bottom: 40px;
+#tmsm-aquos-spa-booking-confirm-container {
+    text-align: center;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    @media (min-width: 600px) {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 #tmsm-aquos-spa-booking-cancel{
   float: left;
